# souffle

./: .clang-format  .envrc  .gitmodules  LICENSE  README.md  flake.nix  meson.build  meson_options.txt  souffle.c  souffle.h  test_case.c
examples/: basic.c  hashy_test.c
src/: hashy.c  hashy.h  souffle.c  souffle.h
